<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Email Label -->
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/signInTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Email Input -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Enter Email"
            android:background="@drawable/rounded_section_background_search"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Username Label -->
        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Username Input -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Enter Username"
            android:background="@drawable/rounded_section_background_search"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/usernameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Password Label -->
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Password Input -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_section_background_search"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- RePassword Label -->
        <TextView
            android:id="@+id/rePasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeat Password"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- RePassword Input -->
        <EditText
            android:id="@+id/rePassword_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Repeat Password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_section_background_search"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rePasswordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Botón Sign Up -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            style="@style/ButtonPrimary"
            app:layout_constraintTop_toBottomOf="@id/rePassword_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- "Or sign up with" -->
        <TextView
            android:id="@+id/orSignUpWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or sign up with:"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Social Media Buttons -->
        <LinearLayout
            android:id="@+id/social_media_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/orSignUpWith"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/apple_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_apple"
                android:contentDescription="Apple Login"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/google_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_google"
                android:contentDescription="Google Login"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/facebook_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_facebook"
                android:contentDescription="Facebook Login"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/instagram_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_instagram"
                android:contentDescription="Instagram Login"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/x_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_x"
                android:contentDescription="Twitter Login"
                android:layout_margin="8dp" />
        </LinearLayout>

        <!-- "Already have an account?" -->
        <TextView
            android:id="@+id/logInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/social_media_section"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Botón Log In -->
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Log In"
            style="@style/ButtonPrimary"
            app:layout_constraintTop_toBottomOf="@id/logInText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
