...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/topAiringTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TOP AIRING"
                    android:textSize="28sp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
...
